--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <script src="./content.js"></script>
-    <title>Document</title>
+    <script type="module" src="./content.js"></script>
+    <title>LeetCode Streak</title>
 </head>
 <body>
     <div class="container">
-        <div class="element">Enter leetcode username</div>
-        <input class="element"><br>
-        <button class="element">submit</button>
-
+        <div class="element">Enter LeetCode username:</div>
+        <input id="username" class="element" type="text" placeholder="Username"><br>
+        <div id="warning">pls note that action once done cannot be reset</div>
+        <div id="error"></div>
     </div>
+    <button id="next">Submit</button>
 </body>
 </html>
