--- a/frontend/streak.html
+++ b/frontend/streak.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" src="./problems.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div>
-        CURRENT STREAK IS:
+        TOTAL PROBLMES SOLVED SINCE EXTENSION INSTALLATION:
     </div>
+    <div id="totalProblems"></div>
     <br>
     <div class="streak">
 
