--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
     <script type="module" src="./content.js"></script>
-    <title>LeetCode Streak</title>
+    <title>Home page</title>
 </head>
 <body>
     <div class="container">
-        <div class="element">Enter LeetCode username:</div>
+        <div class="header">Enter LeetCode username:</div>
         <input id="username" class="element" type="text" placeholder="Username"><br>
         <div id="warning">pls note that action once done cannot be reset</div>
         <div id="error"></div>
+        <button id="next">Submit</button>
     </div>
-    <button id="next">Submit</button>
+    
 </body>
 </html>
