--- a/frontend/streak.html
+++ b/frontend/streak.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./streak.css">
     <script type="module" src="./problems.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div>
-        TOTAL PROBLMES SOLVED SINCE EXTENSION INSTALLATION:
+        Total daily problems solved since extension installation:
     </div>
     <div id="totalProblems"></div>
     <br>
-    <div class="streak">
-
     </div>
 </body>
 </html>
